force-app/main/default/objects/User__x/User__x.object-meta.xml
<CustomObject>
    <description>Read / Write replication of User Object in TC SF Org</description>
    <externalDataSource>TC_Production</externalDataSource>
    <externalName>User</externalName>
    <label>TC User</label>
    <pluralLabel>TC Users</pluralLabel>
</CustomObject>