force-app/main/default/objects/User__x/fields/Allocation_Authorization_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Authorization_Number_c__c</fullName>
    <externalDeveloperName>Allocation_Authorization_Number__c</externalDeveloperName>
    <inlineHelpText>This is used to determine if this user has been authorized.  This number comes from the User Allocation Object.</inlineHelpText>
    <label>Allocation Authorization Number</label>
    <length>7</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>