force-app/main/default/objects/User__x/fields/Amadeus_User_c__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_User_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Amadeus_User__c</externalDeveloperName>
    <label>Amadeus User</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>