force-app/main/default/objects/User__x/fields/Amadeus_User_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_User_ID_c__c</fullName>
    <externalDeveloperName>Amadeus_User_ID__c</externalDeveloperName>
    <label>Amadeus User ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>