force-app/main/default/objects/User__x/fields/August_Rnwl_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>August_Rnwl_Goal_c__c</fullName>
    <externalDeveloperName>August_Rnwl_Goal__c</externalDeveloperName>
    <label>Aug Rnwl Goal</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>