force-app/main/default/objects/User__x/fields/Browser_c__c.field-meta.xml
<CustomField>
    <fullName>Browser_c__c</fullName>
    <externalDeveloperName>Browser__c</externalDeveloperName>
    <label>Browser</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chrome</fullName>
            </value>
            <value>
                <fullName>Firefox</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>