force-app/main/default/objects/User__x/fields/Categorization_c__c.field-meta.xml
<CustomField>
    <fullName>Categorization_c__c</fullName>
    <externalDeveloperName>Categorization__c</externalDeveloperName>
    <label>Categorization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>