force-app/main/default/objects/User__x/fields/Current_Month_Rnwl_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Rnwl_Goal_c__c</fullName>
    <externalDeveloperName>Current_Month_Rnwl_Goal__c</externalDeveloperName>
    <label>Current Month Rnwl Goal</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>