force-app/main/default/objects/User__x/fields/Description_of_Issue_c__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Issue_c__c</fullName>
    <externalDeveloperName>Description_of_Issue__c</externalDeveloperName>
    <label>Description of Issue</label>
    <type>TextArea</type>
</CustomField>