force-app/main/default/objects/User__x/fields/DigestFrequency__c.field-meta.xml
<CustomField>
    <fullName>DigestFrequency__c</fullName>
    <externalDeveloperName>DigestFrequency</externalDeveloperName>
    <label>Chatter Email Highlights Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <label>Daily</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Never</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>