force-app/main/default/objects/User__x/fields/Division_c__c.field-meta.xml
<CustomField>
    <fullName>Division_c__c</fullName>
    <externalDeveloperName>Division__c</externalDeveloperName>
    <label>Division*</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>