force-app/main/default/objects/User__x/fields/DVP_c__c.field-meta.xml
<CustomField>
    <fullName>DVP_c__c</fullName>
    <externalDeveloperName>DVP__c</externalDeveloperName>
    <inlineHelpText>This field is used for P2G hierarchy purposes.</inlineHelpText>
    <label>DVP*</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>