force-app/main/default/objects/User__x/fields/EmailEncodingKey__c.field-meta.xml
<CustomField>
    <fullName>EmailEncodingKey__c</fullName>
    <externalDeveloperName>EmailEncodingKey</externalDeveloperName>
    <label>Email Encoding</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UTF-8</fullName>
                <label>Unicode (UTF-8)</label>
            </value>
            <value>
                <fullName>ISO-8859-1</fullName>
                <label>General US &amp; Western Europe (ISO-8859-1, ISO-LATIN-1)</label>
            </value>
            <value>
                <fullName>Shift_JIS</fullName>
                <label>Japanese (Shift-JIS)</label>
            </value>
            <value>
                <fullName>ISO-2022-JP</fullName>
                <label>Japanese (JIS)</label>
            </value>
            <value>
                <fullName>EUC-JP</fullName>
                <label>Japanese (EUC)</label>
            </value>
            <value>
                <fullName>ks_c_5601-1987</fullName>
                <label>Korean (ks_c_5601-1987)</label>
            </value>
            <value>
                <fullName>Big5</fullName>
                <label>Traditional Chinese (Big5)</label>
            </value>
            <value>
                <fullName>GB2312</fullName>
                <label>Simplified Chinese (GB2312)</label>
            </value>
            <value>
                <fullName>Big5-HKSCS</fullName>
                <label>Traditional Chinese Hong Kong (Big5-HKSCS)</label>
            </value>
            <value>
                <fullName>x-SJIS_0213</fullName>
                <label>Japanese (Shift-JIS_2004)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>