force-app/main/default/objects/User__x/fields/Exclude_from_Communications_c__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Communications_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Exclude_from_Communications__c</externalDeveloperName>
    <label>Exclude from Communications</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>