force-app/main/default/objects/User__x/fields/Executive_c__c.field-meta.xml
<CustomField>
    <fullName>Executive_c__c</fullName>
    <externalDeveloperName>Executive__c</externalDeveloperName>
    <label>Executive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Ann Black</fullName>
            </value>
            <value>
                <fullName>Bobbi Stryrak</fullName>
            </value>
            <value>
                <fullName>David Orensanz</fullName>
            </value>
            <value>
                <fullName>Jeanine Salvati</fullName>
            </value>
            <value>
                <fullName>John Guilfoy</fullName>
            </value>
            <value>
                <fullName>Kim Fish</fullName>
            </value>
            <value>
                <fullName>Nicole Dobson</fullName>
            </value>
            <value>
                <fullName>Mathew Vice</fullName>
            </value>
            <value>
                <fullName>Sue Fornear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>