force-app/main/default/objects/User__x/fields/Exemption_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Reason_c__c</fullName>
    <externalDeveloperName>Exemption_Reason__c</externalDeveloperName>
    <label>Exemption Reason</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amadeus AIP Seller</fullName>
            </value>
            <value>
                <fullName>Amadeus User</fullName>
            </value>
            <value>
                <fullName>Cross Sell Initiative</fullName>
            </value>
            <value>
                <fullName>Media User</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>