force-app/main/default/objects/User__x/fields/EZ_Yield_Admin_Secure_Key_c__c.field-meta.xml
<CustomField>
    <fullName>EZ_Yield_Admin_Secure_Key_c__c</fullName>
    <externalDeveloperName>EZ_Yield_Admin_Secure_Key__c</externalDeveloperName>
    <label>EZ Yield Admin Secure Key</label>
    <length>220</length>
    <type>Text</type>
</CustomField>