force-app/main/default/objects/User__x/fields/Feb_New_Sales_c__c.field-meta.xml
<CustomField>
    <fullName>Feb_New_Sales_c__c</fullName>
    <externalDeveloperName>Feb_New_Sales__c</externalDeveloperName>
    <label>Feb New Goal</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>