force-app/main/default/objects/User__x/fields/GDS_Media_Campaign_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>GDS_Media_Campaign_Manager_c__c</fullName>
    <externalDeveloperName>GDS_Media_Campaign_Manager__c</externalDeveloperName>
    <label>GDS Media Campaign Manager</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>