force-app/main/default/objects/User__x/fields/Ignore_Account_is_on_Credit_Hold_c__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Account_is_on_Credit_Hold_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Ignore_Account_is_on_Credit_Hold__c</externalDeveloperName>
    <label>Ignore Account is on Credit Hold</label>
    <type>Checkbox</type>
</CustomField>