force-app/main/default/objects/User__x/fields/Implementation_Region_c__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Region_c__c</fullName>
    <externalDeveloperName>Implementation_Region__c</externalDeveloperName>
    <label>Implementation Region</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>