force-app/main/default/objects/User__x/fields/Include_in_Dashboard_c__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Dashboard_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Include_in_Dashboard__c</externalDeveloperName>
    <label>Include in Dashboard</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>