force-app/main/default/objects/User__x/fields/Internal_TC_Sub_Region_c__c.field-meta.xml
<CustomField>
    <fullName>Internal_TC_Sub_Region_c__c</fullName>
    <externalDeveloperName>Internal_TC_Sub_Region__c</externalDeveloperName>
    <inlineHelpText>Used by the Customer Care teams to show which subregion a user supports.</inlineHelpText>
    <label>Internal TC Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>ANZ &amp; Japan</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Central Europe Region</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Commercial Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Eastern Europe Region</fullName>
            </value>
            <value>
                <fullName>Europe Region</fullName>
            </value>
            <value>
                <fullName>International Corporate</fullName>
            </value>
            <value>
                <fullName>International Enterprise</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Middle East, Turkey &amp; Others</fullName>
            </value>
            <value>
                <fullName>N Asia</fullName>
            </value>
            <value>
                <fullName>Northern Europe Region</fullName>
            </value>
            <value>
                <fullName>SE Asia</fullName>
            </value>
            <value>
                <fullName>Southern Europe Region</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>UK &amp; Ireland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>