force-app/main/default/objects/User__x/fields/Jan_New_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Jan_New_Goal_c__c</fullName>
    <externalDeveloperName>Jan_New_Goal__c</externalDeveloperName>
    <label>Jan New Goal</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>