force-app/main/default/objects/User__x/fields/January_Total_NEXT_YEAR_c__c.field-meta.xml
<CustomField>
    <fullName>January_Total_NEXT_YEAR_c__c</fullName>
    <externalDeveloperName>January_Total_NEXT_YEAR__c</externalDeveloperName>
    <label>January Total NEXT YEAR</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>