force-app/main/default/objects/User__x/fields/Last_Month_New_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_New_Goal_c__c</fullName>
    <externalDeveloperName>Last_Month_New_Goal__c</externalDeveloperName>
    <label>Last Month New Goal</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>