force-app/main/default/objects/User__x/fields/Latency_ms_c__c.field-meta.xml
<CustomField>
    <fullName>Latency_ms_c__c</fullName>
    <externalDeveloperName>Latency_ms__c</externalDeveloperName>
    <label>Latency (ms)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>