force-app/main/default/objects/User__x/fields/LEX_Group_c__c.field-meta.xml
<CustomField>
    <fullName>LEX_Group_c__c</fullName>
    <externalDeveloperName>LEX_Group__c</externalDeveloperName>
    <label>LEX Group</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Management and Renewal Sales</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Field and Inside Sales and Prospectors</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>IGT</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>Product-Curtis</fullName>
            </value>
            <value>
                <fullName>Product-Greg</fullName>
            </value>
            <value>
                <fullName>Product-Scott</fullName>
            </value>
            <value>
                <fullName>Sales Ops (except OM)</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>