force-app/main/default/objects/User__x/fields/LEX_Overview_Training_c__c.field-meta.xml
<CustomField>
    <fullName>LEX_Overview_Training_c__c</fullName>
    <externalDeveloperName>LEX_Overview_Training__c</externalDeveloperName>
    <label>LEX Overview Training</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>