force-app/main/default/objects/User__x/fields/March_New_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>March_New_Goal_c__c</fullName>
    <externalDeveloperName>March_New_Goal__c</externalDeveloperName>
    <label>Mar New Goal</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>