force-app/main/default/objects/User__x/fields/May_New_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>May_New_Goal_c__c</fullName>
    <externalDeveloperName>May_New_Goal__c</externalDeveloperName>
    <label>May New Goal</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>