force-app/main/default/objects/User__x/fields/May_New_RVP_Commitment_c__c.field-meta.xml
<CustomField>
    <fullName>May_New_RVP_Commitment_c__c</fullName>
    <externalDeveloperName>May_New_RVP_Commitment__c</externalDeveloperName>
    <label>May New RVP Commitment</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>