force-app/main/default/objects/User__x/fields/Next_Month_New_Goal_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_New_Goal_c__c</fullName>
    <externalDeveloperName>Next_Month_New_Goal__c</externalDeveloperName>
    <label>Next Month New Goal</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>